# solanabetting

./: .gitignore  test-program.js
frontend/: tailwind.config.js
frontend/pages/: _app.tsx  index.tsx
frontend/src/components/: BetModal.tsx  ClaimCard.tsx  ClaimForm.tsx  ResolutionView.tsx  WalletConnect.tsx
frontend/src/pages/: create.tsx
frontend/src/pages/claim/: [id].tsx
frontend/src/styles/: globals.css
frontend/src/utils/: types.ts
frontend/styles/: globals.css
frontend/utils/: solana.ts
programs/: solana-betting-dapp.rar
programs/solana-betting-dapp/: Cargo.toml
programs/solana-betting-dapp/src/: lib.rs
resolver-bot/: index.js  index.ts
solana-betting-dapp/: Anchor.toml  build.ps1
solana-betting-dapp/programs/solana-betting-dapp/: Cargo.toml
solana-betting-dapp/programs/solana-betting-dapp/src/: lib.rs
solana-betting-dapp/tests/: solana-betting-dapp.ts
tests/: solana-betting-dapp.ts
