[package]
name = "solana-betting-dapp"
version = "0.1.0"
description = "Solana Betting dApp Program"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_betting_dapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.18.0"
